# macau-engine

./: CMakeLists.txt  README.md  main.cpp  test.h
Players/: Player.cpp  Player.h
Players/algorithms/: PlayerPlaceholder.h
game/: Deck.cpp  Deck.h  Game.cpp  Game.h  Punishments.h
game/Cards/: Ace.cpp  Ace.h  AgroCard.cpp  AgroCard.h  BasicCard.h  Card.cpp  Card.h  Jack.h  QueenOfSpades.cpp  QueenOfSpades.h
interface/: MainInterface.cpp  MainInterface.h
players/: Player.cpp  Player.h
players/algorithms/: AdvancedPlaceholder.cpp  AdvancedPlaceholder.h  PlayerPlaceholder.cpp
src/: CMakeLists.txt  test.h
src/game/: Deck.h  Game.cpp  Game.h
src/game/Cards/: AgroCard.cpp  BasicCard.h  Jack.cpp  Jack.h  QueenOfSpades.cpp  QueenOfSpades.h
src/players/: Player.h
src/players/algorithms/: AdvancedPlaceholder.h  PlayerPlaceholder.h
src/utilities/: LinkedList.h  LinkedList.tpp  LinkedListEl.h
utilities/: LinkedList.cpp  LinkedList.h  LinkedList.tpp  LinkedListEl.cpp  LinkedListEl.h
